--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python,visualstudiocode,windows,images,linux
+
+results/*
+*.bat
